test/TestPhases/typechecker/invalid/returnFromLoopMay.blc
module returnFromLoopMay

activity doingStuff () returns int64
    var x: int32
    repeat
        x = x + 1
        if false then
            return x
        end
        await true
    end
end

activity main ()()
    var x: int64
    x = run doingStuff()
    await false
end
